--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This file was created by PyCharm 2.0.2 for binding GitHub repository
+LibLib
+
+A project for UCSC's CMPS 80S course.
+
+A programming "meta-library" site, designed to make distributing and using small snippets, recipes, or libraries easy.
